# frame-engine

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
frame_processor/: Dockerfile  main.py  processor.py
frame_processor/unit_tests/: test_processor.py
reporter/: Dockerfile  main.py  reporting.py
reporter/unit_tests/: conftest.py  test_reporter.py
shared/: config.py  models.py
shared/unit_tests/: test_models.py
stream_reader/: Dockerfile  batcher.py  main.py  publisher.py
stream_reader/frame_reader/: __init__.py  fake_camera.py  reader.py
stream_reader/unit_tests/: conftest.py  test_batcher.py  test_publisher.py  test_worker.py
